external-crates/move/crates/move-compiler/tests/move_check/parser/struct_without_fields.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_without_fields.move:3:13
  │
3 │     struct S;
  │             ^
  │             │
  │             Unexpected ';'
  │             Expected '{'
