external-crates/move/crates/move-compiler/tests/move_check/parser/struct_without_fields.move
module 0x42::M {
    // Non-native structs must specify the list of fields.
    struct S;
}
